--- a/helicopter_project/TP/TP2.tex
+++ b/helicopter_project/TP/TP2.tex
@@ -38,13 +38,9 @@ Si le temps le permet, analysez la robustesse des estimations des paramètres de
 \paragraph{}
 Interprétez les valeurs des paramètres du modèle retenu (bruit d'observation, portées, ...). Si vous choisissez d'utiliser des termes de tendance, peuvent-ils s'interpréter ?
 
-\subsection*{Analyse de sensibilité (1h30)}
+\subsection*{Région contenant l'optimum (1h30)}
 \paragraph{}
-Appliquez les méthodes vues en cours d'analyse de sensibilité pour représenter les effets principaux et calculez les indices de Sobol. D'après le modèle, quelles sont les variables (et les interactions) qui sont influentes ? Cela peut-il s'interpréter physiquement ?
-
-\subsection*{Région contenant l'optimum}
-\paragraph{}
-À partir du modèle dont vous disposez, êtes vous capable d'identifier une région contenant \emph{a priori} l'optimum ? Quelle méthode pouvez-vous proposer pour enrichir le plan d'expériences dans cette région ? Si le temps le permet, réalisez 10 nouvelles expériences pour affiner le modèle dans cette région d'intérêt.
+À partir du modèle dont vous disposez, êtes vous capable d'identifier une région contenant \emph{a priori} l'optimum ? Quelle méthode pouvez-vous proposer pour enrichir le plan d'expériences dans cette région ? Réalisez 10 nouvelles expériences pour affiner le modèle dans cette région d'intérêt.
 \end{document}
 
 
