--- a/helicopter_project/TP/TP3.tex
+++ b/helicopter_project/TP/TP3.tex
@@ -18,11 +18,15 @@
 \maketitle
 \paragraph{Objectif :} effectuer quelques itérations d'EGO afin de trouver l'hélicoptère qui maximise le temps de chute.
 
-\subsection*{Amélioration espérée dans le cas bruité}
-L'algorithme EGO vous semble-t-il adapté au cas d'observations bruitées ? Consultez la documentation du package \texttt{DiceOptim} pour trouver des solutions à ce problème. 
+\subsection*{Analyse de sensibilité (1h30)}
+\paragraph{}
+Appliquez les méthodes vues en cours d'analyse de sensibilité pour représenter les effets principaux et calculez les indices de Sobol. D'après le modèle, quelles sont les variables (et les interactions) qui sont influentes ? Cela peut-il s'interpréter physiquement ?
 
-\subsection*{Optimisation}
-Trouvez la configuration des paramètres d'entrée qui maximise l'équivalent de l'EI dans le cas bruité, effectuez l'expérience associée. Le temps de chute se trouve-t-il amélioré? Recommencez plusieurs fois la procédure, en mettant à jour votre modèle de krigeage à chaque fois. 
+\subsection*{Optimisation avec EGO (1h30)}
+Le critère de l'EI vous semble-t-il adapté au cas d'observations bruitées ? Consultez la documentation du package \texttt{DiceOptim} pour trouver des solutions à ce problème. 
+
+\paragraph{}
+Trouvez la configuration des paramètres d'entrée qui maximise l'équivalent de l'EI dans le cas bruité, puis effectuez l'expérience associée. Le temps de chute se trouve-t-il amélioré? Recommencez plusieurs fois la procédure, en mettant à jour votre modèle de krigeage à chaque fois. 
 
 \subsection*{Rapport}
 \paragraph{}
